--- a/styles/styles.css
+++ b/styles/styles.css
@@ -181,6 +181,14 @@ p {
   padding-bottom: 60px;
 }
 
+.footer-content {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+
+/* ЛОГО І АДРЕСА */
+
 .logo-alt {
   display: inline-block;
   color: var(--text-color-alt);
@@ -190,6 +198,10 @@ p {
 
 .address-street > .footer-link {
   color: var(--text-color-alt);
+}
+
+.footer-logo-address {
+  margin-right: 70px;
 }
 
 .footer-link {
@@ -214,6 +226,8 @@ p {
   margin-bottom: 9px;
 }
 
+/* НАШІ СОЦ МЕРЕЖІ */
+
 .soc-join {
   margin-bottom: 20px;
 
@@ -225,24 +239,9 @@ p {
   text-transform: uppercase;
 }
 
-.footer-logo-address {
-  margin-right: 70px;
-}
-
-.footer-content {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
 .soc-link {
   background-color: rgba(255, 255, 255, 0.1);
   margin-right: 10px;
-}
-
-.footer-social {
-  align-self: flex-start;
-  margin-top: 12px;
 }
 
 .soc-icon-footer {
@@ -251,6 +250,91 @@ p {
 
 .soc-link:nth-child(4) {
   margin-right: 0;
+}
+
+/* Подпишитесь на рассылку */
+
+.sign-up-mail {
+  margin-left: 93px;
+}
+
+.sign-up-text {
+  margin-bottom: 20px;
+
+  color: var(--text-color-alt);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.sign-up-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sign-up-input {
+  display: block;
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+
+  background-color: transparent;
+  color: var(--text-color-alt);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.sign-up-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.submit-btn {
+  display: flex;
+  align-items: center;
+  margin-left: 12px;
+
+  width: 200px;
+  height: 50px;
+  padding: 10px 28px 10px 29px;
+  color: var(--text-color-alt);
+
+  background-color: var(--btn-color-social-focus);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+
+  cursor: pointer;
+
+  transition: background-color 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+  background-color: var(--btn-color-focus);
+}
+
+.submit-btn-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--text-color-alt);
+}
+
+.submit-bnt-icon {
+  margin-left: 10px;
+  fill: currentColor;
 }
 
 /* ========================/// MODAL WINDOW ///====================== */
