--- a/styles/styles.css
+++ b/styles/styles.css
@@ -382,7 +382,7 @@ p {
   opacity: 1;
   visibility: visible;
 
-  padding: 40px 20px;
+  padding: 40px;
   width: 528px;
   height: 581px;
 
@@ -402,10 +402,6 @@ p {
   );
 }
 
-.modal-window > h3 {
-  margin-bottom: 10px;
-}
-
 .close-modal-btn {
   display: flex;
   justify-content: center;
@@ -416,6 +412,8 @@ p {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 
+  width: 30px;
+  height: 30px;
   background-color: #fff;
 
   position: absolute;
@@ -427,9 +425,6 @@ p {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-modal-btn img {
-  display: block;
-}
 
 .icon-close-cross {
   fill: currentColor;
@@ -439,6 +434,140 @@ p {
   transform: translate(-2%, -2%);
   cursor: pointer;
   color: var(--btn-color-focus);
+}
+
+.modal-header {
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--text-color-main);
+}
+
+.label-text {
+  display: block;
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.17;
+
+  letter-spacing: 0.01em;
+
+  color: var(--text-color-secondary);
+}
+
+.modal-input,
+.modal-comment {
+  width: 100%;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-input {
+  display: block;
+  margin-bottom: 10px;
+  padding: 12px 42px;
+}
+
+.modal-input:focus {
+  border-color: var(--text-colot-accent);
+}
+
+.modal-comment {
+  height: 120px;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  resize: none;
+}
+
+.modal-comment::placeholder {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-input:focus + .icon-input {
+  fill: var(--text-colot-accent);
+}
+
+.for-input-icon {
+  fill: var(--text-color-main);
+  position: relative;
+}
+
+.icon-input {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+
+/* тут самодіяльність по чекбоксу */
+.icon-checkbox {
+  margin-left: 12px;
+  fill: transparent;
+  border: 2px solid var(--text-color-main);
+  border-radius: 4px;
+}
+
+.modal-privacy {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.modal-privacy-input {
+  position: absolute;
+}
+
+.modal-privacy-text {
+  margin-left: 8px;
+
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color-secondary);
+}
+
+.privacy-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+
+  color: var(--text-colot-accent);
+}
+.submit-modal-btn {
+  background-color: var(--text-colot-accent);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+
+  display: block;
+  margin: 0 auto;
+  padding: 10px 55px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--text-color-alt);
+
+  letter-spacing: 0.06em;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+
+
+
+.submit-modal-btn:hover {
+  background-color: var(--btn-color-focus);
+  cursor: pointer;
 }
 
 /* ========================/// STUDIO ///====================== */
