--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@
   --text-color-footer: #2f303a;
   --icon-fill: #afb1b8;
   --icon-company-fill: #afb1b8;
+  --cubic-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -123,7 +124,7 @@ textarea {
 .header-nav-link {
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .header-contacts {
@@ -165,7 +166,7 @@ textarea {
 
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .header-contacts-item:not(:last-child) {
@@ -218,7 +219,7 @@ textarea {
 
   transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .footer-link:hover,
@@ -320,7 +321,7 @@ textarea {
   cursor: pointer;
 
   transition: background-color 250ms
-    cubic-bezier(0.4, 0, 0.2, 1);
+    var(--cubic-function);
 }
 
 .submit-btn:hover,
@@ -427,7 +428,7 @@ textarea {
 
   transition-property: transform, color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .icon-close-cross {
@@ -437,7 +438,7 @@ textarea {
 .close-modal-btn:hover {
   transform: translate(-2%, -2%);
   cursor: pointer;
-  color: var(--btn-color-focus);
+  color: var(--btn-color-social-focus);
 }
 
 .modal-header {
@@ -467,6 +468,8 @@ textarea {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+
+  transition: border-color 250ms var(--cubic-function);
 }
 
 .modal-input {
@@ -495,7 +498,7 @@ textarea {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.for-input-icon:focus-within .icon-input {
+.for-input-icon:focus .icon-input {
   fill: var(--text-colot-accent);
 }
 
@@ -509,6 +512,8 @@ textarea {
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+
+  transition: fill 250ms var(--cubic-function);
 }
 
 .modal-privacy {
@@ -586,6 +591,13 @@ textarea {
   text-decoration-line: underline;
 
   color: var(--text-colot-accent);
+
+  transition: color 250ms var(--cubic-function), transform 250ms var(--cubic-function);
+}
+
+.privacy-link:hover, .privacy-link:focus{
+  color: var(--btn-color-focus);
+  transform: translateY(-2px);
 }
 
 .submit-modal-btn {
@@ -606,7 +618,7 @@ textarea {
   letter-spacing: 0.06em;
 
   transition: background-color 250ms
-    cubic-bezier(0.4, 0, 0.2, 1);
+    var(--cubic-function);
 }
 
 .submit-modal-btn:hover {
@@ -670,7 +682,7 @@ textarea {
 
   transition-property: background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .hero-btn:focus,
@@ -845,7 +857,7 @@ textarea {
 
   transition-property: background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .soc-link:hover,
@@ -857,7 +869,7 @@ textarea {
   fill: var(--icon-fill);
   transition-property: fill;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .soc-link:hover .soc-icon,
@@ -896,7 +908,7 @@ textarea {
 
   transition-property: color, border;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .client-icon {
@@ -940,7 +952,7 @@ textarea {
 
   transition-property: box-shadow, color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .filter-btn:hover,
@@ -978,7 +990,7 @@ textarea {
 
   transition-property: box-shadow;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 }
 
 .gallery-card-link:hover,
@@ -1028,7 +1040,7 @@ textarea {
 
   transition-property: transform;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-function);
 
   background-color: rgba(33, 150, 243, 0.9);
   font-size: 18px;
