--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,6 +483,7 @@ button {
   display: block;
   margin-bottom: 10px;
   padding: 12px 42px;
+  height: 40px;
 }
 
 .modal-input:focus,
@@ -751,6 +752,7 @@ button {
   width: 270px;
   height: 120px;
   background-color: var(--bgc-color-secondary);
+  border-radius: 4px;
 
   display: flex;
   justify-content: center;
